# Rustchain

./: QUICKSTART.md  README.md
bounties/issue-684/: .gitignore  README.md  proof.json
bounties/issue-684/docs/: CHALLENGE_GUIDE.md  EVIDENCE_SCHEMA.md
bounties/issue-684/evidence/: .gitkeep
bounties/issue-684/fixtures/: agent_alpha.json  agent_beta.json  expected_state.json
bounties/issue-684/scripts/: ci_validate.sh  collect_proof.py  run_challenge.py  verify_evidence.py
docs/: BOUDREAUX_COMPUTING_PRINCIPLES.md
explorer/: README.md  explorer_server.py  index.html  manifest.json  miner-dashboard.html  requirements.txt  start.sh  test.html
explorer/dashboard/: agent-economy.html  miners.html
explorer/static/css/: explorer.css
explorer/static/js/: explorer.js  sw.js
grafana/: alerts-rustchain.yml  dashboard-rustchain.json  prometheus.yml
java/: .gitignore  JAVA_IMPLEMENTATION.md  README.md  build.bat  build.gradle  build.sh  gradlew  pom.xml  settings.gradle
java/src/main/java/com/rustchain/cli/: NodeHealthMonitor.java  RustChainCLI.java
java/src/main/java/com/rustchain/examples/: BasicValidation.java
java/src/main/java/com/rustchain/model/: Attestation.java  EntropyProof.java  HardwareFingerprint.java  Metadata.java  ProofOfAntiquity.java  Score.java
java/src/main/java/com/rustchain/util/: EntropyGenerator.java  (+1 more)
java/src/test/java/com/rustchain/: RustChainSDKTest.java
monitoring/: alerts.yml  docker-compose.yml  prometheus.yml
node/: rustchain_v2_integrated_v2.2.1_rip200.py
rips/docs/: RIP-302-agent-economy.md  RIP-302-agent-to-agent-test-challenge.md
rtc-types/: .gitignore  Cargo.toml  README.md
rtc-types/src/: badges.rs  epoch.rs  lib.rs  node.rs  wallet.rs
rustchain-client/: Cargo.toml  README.md
rustchain-client/src/: lib.rs  types.rs
rustchain-epoch-reward-calculator/: Cargo.toml  README.md
rustchain-epoch-reward-calculator/src/: lib.rs  main.rs
sdk/: README.md  rustchain_agent_cli.py  setup.py
sdk/docs/: AGENT_ECONOMY_SDK.md
sdk/examples/: agent_economy_examples.py
sdk/go/: LICENSE  README.md  go.mod
sdk/go/agenteco/: agenteco_test.go  api.go  client.go  errors.go  types.go
sdk/go/examples/: agent_management.go  basic_usage.go  error_handling.go  marketplace.go  pagination.go  task_workflow.go
sdk/rustchain/: __init__.py
sdk/rustchain/agent_economy/: __init__.py  agents.py  analytics.py  bounties.py  client.py  payments.py  reputation.py
sdk/tests/: test_agent_economy.py
tests/: test_ledger_invariants.py
tier3/: .gitignore  README.md  __init__.py  demo_pipeline.py  requirements.txt  verify_tier3.py
tier3/agents/: __init__.py  pipeline_orchestrator.py  reward_agent.py  settlement_agent.py  validator_agent.py
tier3/tests/: __init__.py  test_pipeline.py
tier3/transactions/: __init__.py  rtc_transaction.py
tools/: backup_verifier.py  cross_node_verifier.py
tools/health-check-cli/: README.md  main.py
tools/rustchain-wallet/: Cargo.toml  README.md
tools/rustchain-wallet/src/: main.rs
tools/star-tracker/: README.md  main.py
(+1 files in other folders)
