[package]
name = "rtc-types"
version = "0.1.0"
edition = "2021"
description = "Shared types for RustChain API responses"
license = "MIT"
authors = ["sososonia-cyber"]
repository = "https://github.com/sososonia-cyber/rtc-types"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = []
